...
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Score">Score Team</string>
    <string name="liga_match">Liga Match</string>
    <string name="detail_activity">Detail Activity</string>
    <string name="favoriteteam">favorit</string>
    <string name="action_search">Search</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
...
