<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <Spinner
        android:id="@+id/id_teams_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/layoutLiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>