<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.kotlinje.submit2.activity.MainActivity">

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_buttom"
        android:background="@color/colorPrimary"
        app:itemTextColor="#e10404"
        app:itemIconTint="#fcf5f5"
        android:layout_gravity="bottom"
        app:menu="@menu/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.design.widget.BottomNavigationView>

</LinearLayout>
